# Perch-IPC

./: CMakeLists.txt  Documentation.md  Doxyfile  IPC.h  IPCCreateProcess.cpp  IPCCreateProcess.h  IPC_process_creation.cpp  IPC_process_creation.h  Pipe.h  Process.h  Shared_memory.h  main.c  main.cpp  mutex_debug.py  process_creation.cpp  process_creation.h  readme.md
cmake/: CompilerWarnings.cmake  cmake_install.cmake
examples/: Makefile  Pipe_redirection.cpp  SharedMutex_counter.cpp
examples/SharedMemory/SharedMemoryIntegral/: SharedMemory_integral_IPC.cpp  func1.cfg  func_cfg_reader.hpp  get_time.hpp  integrate_serial.hpp
examples/unix/: SharedMutex_counter.cpp
examples/windows/: SharedMutex_counter.cpp
inc/api/: IPC_process_creation.h  Pipe.h  Process.h  ProcessCreation.h  SharedMemory.h  SharedMutex.h  process_creation.h
inc/linux/: linux_proc_creation.h
inc/windows/: windows_proc_creation.h
src/api/: IPC_process_creation.cpp  process_creation.cpp
src/linux/: linux_proc_creation.cpp  linux_proc_creation.h
src/windows/: windows_proc_creation.cpp
testing/: mutex_test.py
